# OpenCV3_Code_MaoXingYun

01_HelloOpenCV/: 1_HelloOpenCV.cpp
02_图像显示/: 2_ShowImage.cpp  CMakeLists.txt
03_图像腐蚀/: 3_ImageErode.cpp
04_blur图像模糊/: 4_BlurImage.cpp
05_canny边缘检测/: 5_Canny.cpp
06_播放视频/: 6_PlayVideo.cpp
07_调用摄像头/: 7_UseCamera.cpp
08_彩色目标跟踪/: 8_CamShiftDemo.cpp
09_用光流法进行运动目标检测/: 9_OpticalFlow.cpp
12_支持向量机之SVM引导/: 12_SupportVectorMachines.cpp
15_利用imwrite生成透明png图像/: 15_Use_imwrite.cpp
17_为程序界面添加滑动条/: 17_CreateTrackbar.cpp
18_基本鼠标操作/: 18_UseMouse.cpp
19_基础图像容器Mat/: 19_UseMat.cpp
20_用OpenCV进行基本绘图/: 20_DrawImage.cpp
21_用指针访问像素/: 21_UsePointerAccessPixel.cpp
22_用迭代器访问像素/: 22_UseIteratorAccessPixel.cpp
23_用动态地址计算配合at访问像素/: 23_UseAtAccessPixel.cpp
24_遍历图像像素的14种方法/: 24_14WaysToAccessPixel.cpp
25_初级图像混合/: 25_ImageBlending.cpp
26_多通道图像混合/: 26_MultiChannelImageBlending.cpp
27_图像对比度、亮度值调整/: 27_ChangeContrastAndBright.cpp
28_离散傅里叶变换/: 28_DFT.cpp
29_XML和YAMl文件的写入/: 29_Write_XML_and_YAML_File.cpp
30_XML和YAMl文件的读取/: 30_Read_XML_and_YAML_File.cpp
34_线性图像滤波综合示例/: 34_LinearImageFilter.cpp
36_双边滤波bilateralFilter函数使用示例/: 36_bilateralFilter.cpp
37_图像滤波综合示例/: 37_ImageFiltering.cpp
38_图像膨胀dilate函数用法示例/: 38_dilate.cpp
39_图像腐蚀erode函数用法示例/: 39_erode.cpp
40_图像腐蚀与膨胀综合示例/: 40_dilate_And_erode.cpp
41_用morphologyEx进行图像膨胀/: 41_DilationEX.cpp
42_用morphologyEx进行图像腐蚀/: ErodeEX.cpp
43_用morphologyEx进行图像开运算/: 43_Opening.cpp
44_用morphologyEx进行图像闭运算/: 44_Closing.cpp
45_用morphologyEx进行形态学梯度运算/: 1.jpg.baiduyun.uploading.cfg  45_Gradient.cpp
(+45 files in other folders)
